Revision history for Mojo-Facebook

0.04
       * post() is no longer possible

0.0302   Sun May 12 11:16:04 2013
       * Fix picture() must also use "scheme"

0.0301   Sun May 12 10:59:38 2013
       * Fix pod error

0.03     Sun May 12 10:56:52 2013
       * Add "scheme" attribute
       * Fix callbacks are called with $self
       * Remove _url attribute

0.0203   Sat Nov 10 15:39:33 2012
       * Fix bug in documentation for "access_token"

0.0202   Sat Nov 10 15:35:07 2012
       * Add better description to "access_token"

0.0201   Mon Sep  3 20:43:43 2012
       * Need to keep the Mojo::Facebook object around when created inside
         the helper

0.02     Sun Sep  2 23:47:09 2012
       * Add Mojolicious::Plugin::Facebook

0.01
       * Started project
       * Add Mojo::Facebook->fecth
       * Add Mojo::Facebook->post
       * Add Mojo::Facebook->comment
       * Add Mojo::Facebook->publish
       * Add Mojo::Facebook->delete_object
       * Add Mojo::Facebook->picture